--- a/wagtail/contrib/modeladmin/static_src/wagtailmodeladmin/scss/breadcrumbs_page.scss
+++ b/wagtail/contrib/modeladmin/static_src/wagtailmodeladmin/scss/breadcrumbs_page.scss
@@ -1,9 +1,2 @@
 @import '../../../../../../client/scss/settings';
 @import '../../../../../../client/scss/tools';
-
-@include media-breakpoint-down(sm) {
-  .breadcrumb {
-    margin-inline-start: 30px;
-    margin-inline-end: -20px;
-  }
-}
